--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.github-profile {
+/* .github-profile {
   margin: 1rem;
 }
 .img {
@@ -26,4 +26,4 @@ form {
 	text-align: center;
   font-size: 1.5rem;
   margin-bottom: 1rem;
-}
+} */
